code validation corrections

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<link rel="stylesheet" type="text/css" href="style_sheets/style.css" />
+		<link rel="stylesheet" type="text/css" href="style_sheets/style.css">
 		<title> CNIT 133 JS_JQUERY_AJAX, About me - Stephanie page</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
