--- a/hw5.html
+++ b/hw5.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" type="text/css" href="style_sheets/style.css" />
+		<link rel="stylesheet" type="text/css" href="style_sheets/style.css">
 		<title> CNIT 133 JS_JQUERY_AJAX, Asignment 5</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
