homework 2 code validation changes

--- a/sub_links_hw2/hw2_part1.html
+++ b/sub_links_hw2/hw2_part1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 		<title>CNIT 133 Homework 2, Basic Operations - Part1</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="description" content="Stephanie Boyette - CNIT 133 Homework JS Project">
 		<meta name="viewport" content="width-device-width, initial-scale-1.0">
 		<link rel="stylesheet" type="text/css" href="../style_sheets/style_hw2_subparts.css">
@@ -27,7 +27,7 @@
 		<div id="main-content-part1">
 
 			<!-- Note: Leave single space between span tags -->
-			<script type="text/javascript">
+			<script>
 				document.write('<span id="red-letters">xy </span><span id="blue-numbers">12 </span><span id="green-numbers">89</span>')
 			</script>
 		</div>	
