--- a/sub_links_hw2/hw2_part2.html
+++ b/sub_links_hw2/hw2_part2.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<title>CNIT 133 Homework 2, Basic Operations - Part2</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="Stephanie Boyette - CNIT 133 Homework JS Project">
 	<meta name="viewport" content="width-device-width, initial-scale-1.0">
 	<link rel="stylesheet" type="text/css" href="../style_sheets/style_hw2_subparts.css">
 	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-	<script id="form-part2" type="text/javascript">
+	<script id="form-part2">
 
 		function runProcess(){
 			// Ask user for 3 Integers, do checks on user input, if good data - do math, return math results to user
