homework 2 code validation changes part 2

--- a/sub_links_hw2/hw2_part2.html
+++ b/sub_links_hw2/hw2_part2.html
@@ -121,7 +121,7 @@
 		<li><a href="../assignments.html">Assignments</a></li>
 		<li><a href="../index.html">Home</a></li>
 	</ul>
-	<h3 id=title-part1>CALC program</h3>
+	<h3 id=title-part1>mini CALC program</h3>
 	<div id="container-part2">
 		<p>
 			In this section we will be doing a bit of math calculating fun. Please enter in the first three fields an integer. This mini calculating program will return the resulting values in the following fields.
@@ -129,7 +129,7 @@
 		<br>
 		<br>
 		<div id="main-content-part2">
-			<section id="body">
+			<div id="body">
 				<form name="myForm2">
 					<table>
 						<tr>
@@ -173,7 +173,7 @@
 					<button type="button" name="button" id="fadeTo">Click to Fade Results</button>
 					<input type="reset" name="RESET" onclick="window.location.reload();">
 				</form>
-			</section>
+			</div>
 		</div>	
 	</div>
 </body>
