assignements and hw2 page changes

--- a/assignments.html
+++ b/assignments.html
@@ -28,12 +28,7 @@
 			 	<br>
 			 	<nav aria-label="Homework assignments navigation">
 					<ul>
-						<li><a aria-label="Dropdown menu - list of sub links for homework assignment 2, part 1 and part 2">Homework 2</a>
-							<ul>
-								<li><a href="sub_links_hw2/hw2_part1.html">part 1</a></li>
-								<li><a href="sub_links_hw2/hw2_part2.html">part 2</a></li>
-							</ul>
-						</li>
+						<li><a href="hw2.html">Homework 2</a></li>
 						<li><a href="hw3.html">Homework 3</a></li>
 						<li><a href="hw4.html">Homework 4</a></li>
 						<li><a href="hw5.html">Homework 5</a></li>
